samples/_failures_safe/1761706687_d054c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91303db3.c:179:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  179 | void print_token_type
      | ^~~~
